--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
         "emitDecoratorMetadata": true,
         "module": "commonjs",
         "target": "ES5",
-        "sourceMap": true
+        "sourceMap": true,
+        "experimentalDecorators": true
     },
     "files": [
         "demo-start/app.ts",
